# aoc-23-rust

./: .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile  next_day.sh
daily-template/: Cargo.toml
daily-template/benches/: benchmarks-criterion.rs
daily-template/src/: part1.rs
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks-criterion.rs
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks-criterion.rs
day-05/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks-criterion.rs
day-07/src/: custom_error.rs  part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks-criterion.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks-criterion.rs  benchmarks.rs
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks-criterion.rs
day-10/src/: part1.rs
www/: Cargo.toml
