[workspace]
resolver = "2"

members = ["day-*", "www"]

[workspace.dependencies]
dhat = "0.3.2"
divan = "0.1.3" # Another crate like `criterion`
glam = "0.24.2" # 3D math for games and graphics
itertools = "0.12.0"
miette = { version = "5.10.0", features = ["fancy"] }
nom = "7.1.3"
petgraph = "0.6.4" # graph data structures with output in `graphviz` format
rayon = "1.8.0"
rstest = "0.18.2" # fixture-based test framework
rstest_reuse = "0.6.0" # "[...] create a set of tests and apply it to every scenario you want to test."
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.10.4" # "Inspect tracing-enabled Rust applications with Tracy"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
