[workspace]
resolver = "2"

# members = ["day-*", "www"]
members = ["day-*"]

[workspace.dependencies]
dhat = "0.3.2"
criterion = { version = "0.4", features = ["html_reports"] }
divan = "0.1.3" # Another crate like `criterion` (Leave it in, even though I prefer criterion?)
itertools = "0.12.0"
miette = { version = "5.10.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
