[package]
name = "day-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
dhat = { workspace = true }
petgraph = "0.6.4"

[dev-dependencies]
criterion = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "day-10"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-10-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
